# livechatapi

./: .env.sample  LICENSE  README.md  pyproject.toml  qiita.md
app/: config.py  main.py
app/api/: __init__.py  youtube.py
app/models/: __init__.py  request.py  youtube.py
app/services/: __init__.py  youtube.py
app/utils/: __init__.py  exceptions.py  http_client.py  logger.py  validators.py
tests/: conftest.py  run_tests.py  test_exceptions.py  test_integration.py  test_validators.py  test_youtube_service.py
