[project]
name = "livechatapi"
version = "0.1.0"
description = "YouTube Live Chat API - Real-time chat message retrieval service"
authors = [
    {name = "kerobot", email = "kerobot"}
]
readme = "README.md"
license = {text = "MIT"}
homepage = "https://github.com/kerobot/livechatapi"
repository = "https://github.com/kerobot/livechatapi"
keywords = ["youtube", "live-chat", "api", "fastapi", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "requests (>=2.32.4,<3.0.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
